Fixed line spacing in about page

--- a/about.html
+++ b/about.html
@@ -314,20 +314,23 @@ $(document).ready(function () {
 </div>
 
 
-<p>MPH Candidate, Department of Epidemiology Comparative Effectiveness and Outcomes Research Columbia University Mailman School of Public Health</p>
-<div id="about" class="section level4">
-<h4>About</h4>
+<p>MPH Candidate, Department of Epidemiology <br> Comparative Effectiveness and Outcomes Research<br />
+Columbia University Mailman School of Public Health</p>
+<div id="about" class="section level3">
+<h3>About</h3>
 <p>I received a BS in Microbiology and Certificate in Global Health from <a href="https://www.wisc.edu/">University of Wisconsin-Madison</a> in 2018. I am currently a second-year MPH student in the Department of Epidemiology at <a href="https://www.columbia.edu/">Columbia University</a>. My expected graduation date is in May 2021.</p>
 </div>
-<div id="work-experience" class="section level4">
-<h4>Work Experience</h4>
+<div id="work-experience" class="section level3">
+<h3>Work Experience</h3>
 <p>Since June 2020, I have been working as a Contact Tracer for the <a href="https://www.dhs.wisconsin.gov/">Wisconsin Department of Health Services</a>. I completed my summer practicum under <a href="https://www.publichealth.columbia.edu/people/our-faculty/pt140">Dr. Parisa Tehranifar</a>, evaluating risk factors for breast cancer in young Ghanaian women using a family-based and unrelated case-control design.</p>
 <p>Prior to attending Columbia University, I served as Science Editor and Chief of Staff for <a href="http://simpsonstreetfreepress.org/media/HomePage.html">Simpson Street Free Press</a>, a non-profit organization based in Madison, WI.</p>
-</div>
 <div id="contact-information" class="section level4">
 <h4>Contact Information</h4>
-<p>Helen Zhang <a href="https://www.publichealth.columbia.edu/academics/departments/epidemiology">Department of Epidemiology</a> <a href="http://www.mailman.columbia.edu/">Columbia Mailman School of Public Health</a></p>
+<p>Helen Zhang<br />
+<a href="https://www.publichealth.columbia.edu/academics/departments/epidemiology">Department of Epidemiology</a><br />
+<a href="http://www.mailman.columbia.edu/">Columbia Mailman School of Public Health</a></p>
 <p>Email: <a href="mailto:helen.z@columbia.edu">helen.z@columbia.edu</a></p>
+</div>
 </div>
 
 
