Adding dashboard to site navigation

--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@ $(document).ready(function () {
   <a href="plotly.html">Plotly</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;helen.z@columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
