fixed images code

--- a/about.html
+++ b/about.html
@@ -319,6 +319,7 @@ $(document).ready(function () {
 
 <p>MPH Candidate, Department of Epidemiology <br> Comparative Effectiveness and Outcomes Research<br />
 Columbia University Mailman School of Public Health</p>
+<p><br><img src="images/graduation.jpg" alt="graduation" style="width:65%; border:10px solid"><br></p>
 <div id="about" class="section level3">
 <h3>About</h3>
 <p>I received a BS in Microbiology and Certificate in Global Health from <a href="https://www.wisc.edu/">University of Wisconsin-Madison</a> in 2018. I am currently a second-year MPH student in the Department of Epidemiology at <a href="https://www.columbia.edu/">Columbia University</a>. My expected graduation date is in May 2021.</p>
