--- a/about.html
+++ b/about.html
@@ -298,6 +298,12 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="http://linkedin.com/in/helenlzhang">
+    <span class="fa fa-linkedin fa-lg"></span>
+     
+  </a>
+</li>
+<li>
   <a href="http://github.com/hlz2108/">
     <span class="fa fa-github fa-lg"></span>
      
